force-app/main/default/objects/Territory_Geo_Assignment__c/Territory_Geo_Assignment__c.object-meta.xml
<CustomObject>
    <description>This object is to create and maintain the mapping between the Territories and Geography for the teams that uses geography based owner assignment process for the Relationship leads and Account Plays.</description>
    <label>Territory Geo Assignment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Geo Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>