force-app/main/default/objects/Territory_Geo_Assignment__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geography</label>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Territory Geo Assignments</relationshipLabel>
    <relationshipName>Territory_Geo_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>