force-app/main/default/objects/Territory_Geo_Assignment__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Territory__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Geo Assignments</relationshipLabel>
    <relationshipName>Territory_Geo_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>