force-app/main/default/objects/Territory_Geo_Assignment__c/fields/Territory_Geography__c.field-meta.xml
<CustomField>
    <fullName>Territory_Geography__c</fullName>
    <label>Territory Geography</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>